@@ -473,6 +473,54 @@ int main(void)
 
   tga_save_png("u8g2_frame.png");
 
+  
+  /*=========================================*/
+  /* u8g2_c_frame.png */
+  
+  u8x8_ClearDisplay(u8g2_GetU8x8(&desc)); 
+  u8g2_SetFont(&u8g2, u8g2_font_helvR08_tr);
+
+  {
+    char *s = "Cage";
+    u8g2_uint_t w = u8g2_GetStrWidth(&u8g2, s);
+    u8g2_uint_t h = u8g2_GetAscent(&u8g2)-u8g2_GetDescent(&u8g2);
+    u8g2_uint_t x = 5;
+    u8g2_uint_t y = 11;
+    
+    u8g2_SetFontPosBaseline(&u8g2);
+    u8g2_FirstPage(&u8g2);
+    do
+    {
+      u8g2_DrawStr(&u8g2, x, y, s);
+      u8g2_DrawFrame(&u8g2, x-1,y-u8g2_GetAscent(&u8g2)-1, w+2, h+2);
+    } while( u8g2_NextPage(&u8g2) );
+
+    tga_is_transparent = 1;
+    u8g2_FirstPage(&desc);
+    do
+    {
+      u8g2_SetFont(&desc, u8g2_font_helvB18_tf);
+      ra(x,y, "x=5, y=11");
+      u8g2_SetFont(&u8g2, u8g2_font_ncenB18_tf);
+      /* descent usually is negative */
+      vm(x-1+w+2+2,y-9+h+2-1, h+2);
+      hm(x-1, y-8+h+2+1+10, w+2);
+      hm(x, y-8+h+2+1, w);
+
+      //ra(60,40, "x=60, y=40");
+      //vm(60+16+2,40+9-1, 9);
+      //hm(60, 40+9+1, 16);
+      
+      //vm(62,19-u8g2_GetDescent(&u8g2), -u8g2_GetDescent(&u8g2));
+    } while( u8g2_NextPage(&desc) );
+
+  }
+  tga_is_transparent = 0;
+  u8g2_SetFontPosBaseline(&u8g2);
+
+  tga_save_png("u8g2_c_frame.png");
+
+
   /*=========================================*/
   /* u8g2_ellipse.png */
   
